<resources>
    <string name="app_name">GPS semaforo COVID</string>
    <string name="btn_telefono">btn_telefono</string>
    <string name="title_activity_maps">Map</string>
    <string name="location_permission_denied">permiso denegado</string>
    <string name="logo_maps">logo_maps</string>
    <string name="linea_covid_19">Linea COVID-19</string>
    <string name="telefono_covid">0800-110124</string>
    <string name="textView_consejo1">Lave manos con abundante agua y jabón</string>
    <string name="titulo_consejos"><u>Consejos:</u></string>
    <string name="icono_manos">icono_manos</string>
    <string name="texto_consejo2">Use cubre bocas en todo momento</string>
    <string name="cont_icono_cubre_bocas">icono cubre bocas</string>
    <string name="texto_consejo3">Use gel antibacterial</string>
    <string name="cont_gel_atnibaterial">gel antibaterial</string>
    <string name="texto_consejo4">Procure no visitar lugares concurridos</string>
    <string name="cont_edificio">edificio</string>
    <string name="cont_gel_antibacterial_png">gel antibacterial png</string>
    <string name="texto_consejo_gel">Use gel antibacterial</string>
    <string name="cont_circulo_rojo">circulo rojo</string>
    <string name="cont_textV_rojo">No salga a menos que sea necesario</string>
    <string name="cont_textV_nivel_de_alerta"><u>Nivel de alerta:</u></string>
    <string name="cont_txtV_circulo_ver">Podemos salir con precaucion</string>
    <string name="img_circulo_verde">circulo verde</string>
    <string name="cont_textV_naranja">De ser posible, permanece en casa</string>
    <string name="cont_textV_amarillo">Más actividades secundarias, con precaución</string>
    <string name="cont_circulo_amarillo">circulo amarillo</string>
    <string name="cont_circulo_naranja">circulo naranja</string>
    <string name="cont_tache_rojo">tache rojo</string>
    <string name="cont_img_flecha">flecha</string>
    <string name="api_key">AIzaSyCxmBtTtxNaAkWNB47aBCI-IrlAQeQogqw</string>
    <string name="botonubicacion">botonUbicacion</string>
    <string name="textView_consejo4">Procure no visitar lugares concurridos</string>
    <string name="descripsion_imagen_edificio">descripsion imagen edificio</string>
    <string name="actualizaciones">Actualizaciones:</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiamVyaWtrbyIsImEiOiJja3Njb3Jvb2UwaXk1MnhtczQ1bG1naTN5In0.1eefAv7StvF9RQ5gNAaAig</string>
    <string name="user_location_permission_explanation">La app necesita permiso de ubicacion</string>
    <string name="user_location_permission_not_granted" />
    <string name="new_location">Location A </string>
    <string name="latitud">Lat:</string>
    <string name="longitud">Long</string>
    <string name="gps_ahorro_de_bateria">GPS/Ahorro de bateria</string>
    <string name="actualizaci_nes_de_ubicacion">Actualizaciónes de ubicacion</string>
    <string name="sensor">Sensor:</string>

</resources>