<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/call_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/btn_telefono"
        android:focusable="true"
        android:onClick="llamarNumero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/stat_sys_phone_call" />

    <TextView
        android:id="@+id/numero_a_llamar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:text="@string/telefono_covid"
        android:textColor="#000000"
        android:textSize="28sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/call_button" />

    <TextView
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/brawler"
        android:includeFontPadding="false"
        android:text="@string/linea_covid_19"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/numero_a_llamar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cons_layout_toolbar"
        android:layout_width="409dp"
        android:layout_height="45dp"
        android:background="#03FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/img_maps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#EE55AEEA"
            android:contentDescription="@string/logo_maps"
            android:elevation="4dp"
            android:onClick="abrirClaseMapa"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_dialog_map" />

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="43dp"
            android:onClick="abrirConfiguracion"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.792"
            app:layout_constraintStart_toEndOf="@+id/img_maps"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_settings"
            tools:ignore="VectorDrawableCompat" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="45dp"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:background="#686868"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/cons_layout_toolbar"
        app:layout_constraintStart_toStartOf="@+id/cons_layout_toolbar"
        app:layout_constraintTop_toTopOf="@+id/cons_layout_toolbar" />

    <View
        android:layout_width="1dp"
        android:layout_height="45dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:background="#686868"
        app:layout_constraintBottom_toBottomOf="@+id/cons_layout_toolbar"
        app:layout_constraintEnd_toEndOf="@+id/cons_layout_toolbar"
        app:layout_constraintTop_toTopOf="@+id/cons_layout_toolbar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="45dp"
        android:background="#686868"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cons_layout_toolbar"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView_consejo1"
        android:layout_width="208dp"
        android:layout_height="73dp"
        android:layout_marginTop="124dp"
        android:fontFamily="@font/brawler"
        android:text="@string/textView_consejo1"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cons_layout_toolbar" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="107dp"
        android:contentDescription="@string/icono_manos"
        app:layout_constraintBottom_toBottomOf="@+id/textView_consejo1"
        app:layout_constraintEnd_toStartOf="@+id/textView_consejo1"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_consejo1"
        app:layout_constraintVertical_bias="0.764"
        app:srcCompat="@drawable/lava_manos" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/brawler"
        android:text="@string/titulo_consejos"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cons_layout_toolbar"
        app:layout_constraintVertical_bias="0.035" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="107dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:contentDescription="@string/cont_icono_cubre_bocas"
        app:layout_constraintBottom_toBottomOf="@+id/textView_consejo2"
        app:layout_constraintEnd_toStartOf="@+id/textView_consejo2"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_consejo2"
        app:layout_constraintVertical_bias="0.563"
        app:srcCompat="@drawable/cubrebocas" />

    <TextView
        android:id="@+id/textView_consejo2"
        android:layout_width="210dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/brawler"
        android:text="@string/texto_consejo2"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_consejo1" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="-179dp" />

    <ImageView
        android:layout_width="79dp"
        android:layout_height="103dp"
        android:layout_marginStart="40dp"
        android:contentDescription="@string/cont_gel_atnibaterial"
        app:layout_constraintBottom_toBottomOf="@+id/textView_consejo3"
        app:layout_constraintEnd_toStartOf="@+id/textView_consejo3"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_consejo3"
        app:layout_constraintVertical_bias="0.571"
        app:srcCompat="@drawable/gel_antibac" />

    <TextView
        android:id="@+id/textView_consejo3"
        android:layout_width="214dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:fontFamily="@font/brawler"
        android:text="@string/texto_consejo3"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_consejo2"
        app:layout_constraintVertical_bias="0.009" />

    <ImageView
        android:id="@+id/img_edificio_h"
        android:layout_width="46dp"
        android:layout_height="130dp"
        android:layout_marginStart="60dp"
        android:contentDescription="@string/cont_edificio"
        app:layout_constraintBottom_toBottomOf="@+id/textView_consejo4"
        app:layout_constraintEnd_toStartOf="@+id/textView_consejo4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_consejo4"
        app:srcCompat="@drawable/edificio" />

    <ImageView
        android:layout_width="49dp"
        android:layout_height="80dp"
        android:contentDescription="@string/cont_tache_rojo"
        app:layout_constraintBottom_toBottomOf="@+id/img_edificio_h"
        app:layout_constraintStart_toStartOf="@+id/img_edificio_h"
        app:layout_constraintTop_toTopOf="@+id/img_edificio_h"
        app:srcCompat="@drawable/tacherojo" />

    <TextView
        android:id="@+id/textView_consejo4"
        android:layout_width="203dp"
        android:layout_height="58dp"
        android:layout_marginEnd="28dp"
        android:contentDescription="@string/descripsion_imagen_edificio"
        android:fontFamily="@font/brawler"
        android:text="@string/textView_consejo4"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_consejo3"
        app:layout_constraintVertical_bias="0.094" />

</androidx.constraintlayout.widget.ConstraintLayout>