<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="50"
    tools:context=".MapsActivity_fragment">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".MapsActivity" />


    <RelativeLayout
        android:id="@+id/relative_layout_maps"
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:alpha="50"
        android:background="#FFFFFF"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_ok_maps"
        tools:targetApi="lollipop">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/const_over_map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="50">


            <ImageView
                android:id="@+id/img_circulo_rojo4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/cont_circulo_rojo"
                android:rotation="0"
                android:rotationX="0"
                android:src="@drawable/circulo_rojo"
                app:layout_constraintBottom_toBottomOf="@+id/textV_rojo"
                app:layout_constraintEnd_toStartOf="@+id/textV_rojo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textV_rojo"
                app:layout_constraintVertical_bias="0.45" />

            <TextView
                android:id="@+id/textV_rojo"
                android:layout_width="145dp"
                android:layout_height="44dp"
                android:layout_marginTop="8dp"
                android:text="@string/cont_textV_rojo"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textV_titulo_mapa"
                app:layout_constraintVertical_bias="0.069" />

            <TextView
                android:id="@+id/textV_verde"
                android:layout_width="145dp"
                android:layout_height="44dp"
                android:text="@string/cont_txtV_circulo_ver"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.939"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textV_naranja" />

            <TextView
                android:id="@+id/textV_naranja"
                android:layout_width="145dp"
                android:layout_height="44dp"
                android:text="@string/cont_textV_naranja"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.939"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textV_titulo_mapa"
                app:layout_constraintVertical_bias="0.155" />

            <TextView
                android:id="@+id/textV_amarillo"
                android:layout_width="169dp"
                android:layout_height="52dp"
                android:text="@string/cont_textV_amarillo"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.198"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textV_rojo"
                app:layout_constraintVertical_bias="0.333" />

            <TextView
                android:id="@+id/textV_titulo_mapa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/brawler"
                android:text="@string/cont_textV_nivel_de_alerta"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_circulo_verde"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/img_circulo_verde"
                android:src="@drawable/circulo_verde"
                app:layout_constraintBottom_toBottomOf="@+id/textV_verde"
                app:layout_constraintEnd_toStartOf="@+id/textV_verde"
                app:layout_constraintTop_toTopOf="@+id/textV_verde" />

            <ImageView
                android:id="@+id/img_circulo_amarillo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/cont_circulo_amarillo"
                android:src="@drawable/circulo_amarillo"
                app:layout_constraintBottom_toBottomOf="@+id/textV_amarillo"
                app:layout_constraintEnd_toStartOf="@+id/textV_amarillo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textV_amarillo" />

            <ImageView
                android:id="@+id/img_circulo_naranja"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/cont_circulo_naranja"
                android:src="@drawable/circulo_naranja"
                app:layout_constraintBottom_toBottomOf="@+id/textV_naranja"
                app:layout_constraintEnd_toStartOf="@+id/textV_naranja"
                app:layout_constraintTop_toTopOf="@+id/textV_naranja" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_ok_maps"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_flecha"
        android:layout_width="51dp"
        android:layout_height="42dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:contentDescription="@string/cont_img_flecha"
        android:onClick="regresarMain"
        android:elevation="4dp"
        android:src="@drawable/flecha_atras_blanca"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar_ok_maps"
        app:layout_constraintStart_toStartOf="@+id/toolbar_ok_maps"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>